--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.4.4",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@vue/cli": "^4.0.5",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
