--- a/frontend-backend/frontend2/package.json
+++ b/frontend-backend/frontend2/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.3.2",
     "eventemitter3": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
+    "vue-tel-input": "^4.0.0",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
