--- a/frontend-backend/frontend2/package.json
+++ b/frontend-backend/frontend2/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-documenteditor": "^17.3.29",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
