--- a/frontend-backend/frontend2/package.json
+++ b/frontend-backend/frontend2/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "eventemitter3": "^4.0.0",
+    "google-maps": "^3.3.0",
     "vue": "^2.6.10",
     "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
