--- a/frontend-backend/frontend2/package.json
+++ b/frontend-backend/frontend2/package.json
@@ -14,6 +14,7 @@
     "eventemitter3": "^4.0.0",
     "google-maps": "^3.3.0",
     "vue": "^2.6.10",
+    "vue-doc-preview": "^0.3.2",
     "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
     "vue-tel-input": "^4.0.0",
