--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-wellgroomed/frontend/node_modules/
+frontend/node_modules/
+backend/venv
 .DS_Store
 /node_modules
 .vscode
+backend/backend-framework/framework/__pycache__
