--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,19 @@
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.0.1",
     "eventemitter3": "^4.0.0",
     "google-maps": "^3.3.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-doc-preview": "^0.3.2",
     "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
+    "vue-session": "^1.0.0",
     "vue-tel-input": "^4.0.0",
     "vuetify": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
