--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-doc-preview": "^0.3.2",
+    "vue-notification": "^1.3.20",
     "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
     "vue-session": "^1.0.0",
