--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-doc-preview": "^0.3.2",
+    "vue-loading-overlay": "^3.2.0",
     "vue-notification": "^1.3.20",
     "vue-phone-number-input": "^1.0.10",
     "vue-router": "^3.1.3",
     "vue-session": "^1.0.0",
+    "vue-spinners": "^1.0.2",
     "vue-tel-input": "^4.0.0",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
