--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ backend/venv
 .DS_Store
 /node_modules
 .vscode
-.pyc
+*.pyc
+*.log
 backend/backend-framework/framework/__pycache__
 backend/backend-framework/vueapi/log.log
