--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "google-maps": "^3.3.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-click-outside": "^1.0.7",
     "vue-doc-preview": "^0.3.2",
     "vue-loading-overlay": "^3.2.0",
     "vue-notification": "^1.3.20",
