--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ backend/venv
 .vscode
 *.pyc
 *.log
+*.local
 backend/backend-framework/framework/__pycache__
 backend/backend-framework/vueapi/log.log
