--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service build --mode test"
+    "test": "vue-cli-service build --mode staging"
   },
   "dependencies": {
     "@syncfusion/ej2-vue-documenteditor": "^17.3.29",
