--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "vue-spinners": "^1.0.2",
     "vue-tel-input": "^4.0.0",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
